# VisionAI

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  ml_models.py  models.py  processor.py  utils.py
app/deep_sort_pytorch/configs/: deep_sort.yaml
app/static/: index.html
exp/: PersonTracker.py  finetune_yolo.py  notebook.ipynb
scripts/: yolo_export.py
ui/: tsconfig.json
ui/app/: layout.tsx  page.tsx
ui/app/track/: page.tsx
