[project]
name = "visionai"
version = "0.1.0"
description = ""
authors = [
    {name = "Praveen Kumar",email = "praveenkumar.e2022@vitstudent.ac.in"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pymilvus (>=2.5.4,<3.0.0)",
    "ultralytics (>=8.3.75,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "boxmot (>=11.0.9,<12.0.0)",
    "opencv-python (<4.8.0.76)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
